--- a/src/components/navbar/style.sass
+++ b/src/components/navbar/style.sass
@@ -6,10 +6,12 @@ nav
     justify-content: space-between
     align-items: center
     background: #181C22
+    transition: all 1s linear
     img
         width: 55px
         height: 55px
     ul
+        margin: 0
         height: 100%
         list-style: none
         display: flex
@@ -18,12 +20,26 @@ nav
         color: #ffffff
         font-family: 'Neutra Text'
         li
-            padding: 0 20px
+            padding: 10px 20px
             height: 100%
             display: flex
             justify-content: center
             align-items: center
             border-bottom: solid 2px transparent
+            &:nth-child(4)
+                display: none
+                width: 0px
             &:hover
                 cursor: pointer
                 border-bottom: solid 2px #F0DB4F
+
+@media only screen and (max-width: 610px)
+    nav > ul > li
+                display: none
+                min-height: 55px
+                &:hover
+                    background: #F0DB4F
+                    color: #181C22
+                &:nth-child(4)
+                    display: flex
+                    width: auto
