--- a/src/components/navbar/style.sass
+++ b/src/components/navbar/style.sass
@@ -26,6 +26,7 @@ nav
             justify-content: center
             align-items: center
             border-bottom: solid 2px transparent
+            white-space: nowrap
             &:nth-child(4)
                 display: none
                 width: 0px
