--- a/src/pages/home/style.sass
+++ b/src/pages/home/style.sass
@@ -107,6 +107,18 @@
         color: #00ffff
         word-wrap: break-word
 
+@media only screen and (max-width: 1100px)
+  .main_container > span
+    height: 3.6em
+
+@media only screen and (max-width: 600px)
+  .main_container > span
+    height: 5.4em
+
+@media only screen and (max-width: 400px)
+  .main_container > span
+    height: 7.2em
+
 
 @keyframes rotation
   from
