--- a/src/components/navbar/style.sass
+++ b/src/components/navbar/style.sass
@@ -1,4 +1,4 @@
-nav
+.navbar
     margin: 0 auto
     width: 100%
     height: 55px
@@ -7,10 +7,10 @@ nav
     align-items: center
     background: #181C22
     transition: all 1s linear
-    img
+    .navbar_logo
         width: 55px
         height: 55px
-    ul
+    .navbar_list
         margin: 0
         height: 100%
         list-style: none
@@ -19,28 +19,40 @@ nav
         align-items: center
         color: #ffffff
         font-family: 'Neutra Text'
-        li
-            padding: 10px 20px
+        .navbar_button_container
+            margin: 0
+            padding: 0
             height: 100%
             display: flex
             justify-content: center
             align-items: center
+            text-decoration: none
             border-bottom: solid 2px transparent
-            white-space: nowrap
+            color: #ffffff
             &:nth-child(4)
                 display: none
                 width: 0px
             &:hover
                 cursor: pointer
                 border-bottom: solid 2px #F0DB4F
+            .navbar_button
+                padding: 10px 20px
+                height: 100%
+                display: flex
+                justify-content: center
+                align-items: center
+                white-space: nowrap
 
 @media only screen and (max-width: 610px)
-    nav > ul > li
-                display: none
-                min-height: 55px
-                &:hover
-                    background: #F0DB4F
-                    color: #181C22
-                &:nth-child(4)
-                    display: flex
-                    width: auto
+    .navbar > .navbar_list > .navbar_button_container
+        padding: 0
+        display: none
+        min-height: 55px
+        &:hover
+            background: #f0db4f
+            color: #181c22
+        &:nth-child(4)
+            display: flex
+            width: auto
+        .navbar_button
+            padding: 0 20px
