--- a/src/pages/home/style.sass
+++ b/src/pages/home/style.sass
@@ -1,123 +1,17 @@
-// Landing page section sass
-.main_container
-    width: 100%
-    height: 100%
-    min-height: 95vh
-    display: flex
-    flex-grow: 1
-    justify-content: center
-    align-items: center
-    flex-direction: column
-    .img_wrapper
-        margin: 50px auto
-        width: 260px
-        height: 260px
-        display: flex
-        justify-content: center
-        align-self: center
-        background: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(255,115,0,1) 25%, rgba(254,255,0,1) 50%, rgba(0,255,162,1) 75%, rgba(0,245,255,1) 100%)
-        border-radius: 50%
-        animation: rotation 5s linear infinite
-        img
-            margin: auto
-            width: 250px
-            height: 250px
-            object-fit: cover
-            border-radius: 50%
-            background-position: left
-            animation: reverse-rotation 5s linear infinite
-    span
-      margin: 0 auto
-      width: 90%
-      color: #fff
-      font-family: 'Neutra Text'
-      font-size: 1.8em
-      letter-spacing: .05em
-      text-align: center
-    .social_container
-      margin: 50px auto
-      display: flex
-      flex-wrap: wrap
-      justify-content: center
-      align-items: center
-      button
-        margin: 10px
-        padding: 10px 20px
-        border: none
-        outline: none
-        cursor: pointer
-        color: #fff
-        font-family: 'Roboto'
-        &:nth-child(1)
-          background: #006192
-        &:nth-child(2)
-          background: #1DA1F2
-        &:nth-child(3)
-          background: #FF0000
-        &:nth-child(4)
-          background: #211F1F
-
-// resume section sass
-.resume
-  margin: 0 auto
-  width: 80%
-  max-width: 960px
-  display: flex
-  flex-direction: column
-  justify-content: center
-  align-items: center
-  .section_title
-    width: 100%
-    display: flex
-    justify-content: center
-    align-items: center
-    span
-      padding: 0 30px
-      color: #ffffff
-      font-family: 'Open Sans'
-      font-size: 2em
-    div
-      width: 100%
-      height: 5px
-      background: #00ffff
-  .resume_unit
-    margin: 20px 0
-    width: 100%
-    display: flex
-    flex-direction: column
-    color: #ffffff
-    .title
-      font-family: 'Neutra Text'
-      font-size: 1.5em
-    .info
-      margin: 5px 0
-      display: flex
-      div
-        padding: 0 10px 0  0
-        font-family: 'Open Sans'
-        &:nth-child(1)
-          border-right: solid 2px #ffffff
-        &:nth-child(2)
-          padding: 0 0 0 10px
-    .description
-      max-width: 850px
-      font-family: 'Roboto'
-      line-height: 1.5em
-      a
-        color: #00ffff
-        word-wrap: break-word
-
 @media only screen and (max-width: 1100px)
-  .main_container > span
+  .main_container > .typewrite
     height: 3.6em
+    width: 90%
 
 @media only screen and (max-width: 600px)
-  .main_container > span
+  .main_container > .typewrite
     height: 5.4em
+    width: 90%
 
 @media only screen and (max-width: 400px)
-  .main_container > span
+  .main_container > .typewrite
     height: 7.2em
+    width: 90%
 
 
 @keyframes rotation
