--- a/src/App.sass
+++ b/src/App.sass
@@ -23,3 +23,30 @@ body::-webkit-scrollbar-track
 
 body::-webkit-scrollbar-thumb
     background: #181C22
+
+@keyframes rotate-wrapper
+  from
+    transform: rotate(0deg)
+  to
+    transform: rotate(360deg)
+
+@keyframes reverse-rotate
+  from
+    transform: rotate(360deg)
+  to
+      transform: rotate(0deg)
+
+@media only screen and (max-width: 1100px)
+  .main_container > .typewrite
+    height: 3.6em
+    width: 90%
+
+@media only screen and (max-width: 600px)
+  .main_container > .typewrite
+    height: 5.4em
+    width: 90%
+
+@media only screen and (max-width: 400px)
+  .main_container > .typewrite
+    height: 7.2em
+    width: 90%
