--- a/src/App.sass
+++ b/src/App.sass
@@ -8,6 +8,7 @@ html, body, #root
     margin: 0 auto
     width: 100%
     background: #222831
+    overflow-x: hidden
     .main_app
         width: 100%
         height: 100%
@@ -36,17 +37,6 @@ body::-webkit-scrollbar-thumb
   to
       transform: rotate(0deg)
 
-@media only screen and (max-width: 1100px)
-  .main_container > .typewrite
-    height: 3.6em
-    width: 90%
-
-@media only screen and (max-width: 600px)
-  .main_container > .typewrite
-    height: 5.4em
-    width: 90%
-
-@media only screen and (max-width: 400px)
-  .main_container > .typewrite
-    height: 7.2em
-    width: 90%
+@keyframes caret 
+  50%
+    background-color: transparent
